# phoenix

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: package-lock.json  package.json
assets/js/: app.js  user_socket.js
src/: main.rs
src/channels/: mod.rs  socket.rs  user_socket.rs
src/templates/: index.html
