[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"]}
axum-extra = { version = "0.3", features = ["spa"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

phoenix_ws = { git = "https://github.com/nanlong/phoenix_ws.git", rev = "c25de90" }